crates/cribo/tests/snapshots/requirements@wrapper_decorator_same_name_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/wrapper_decorator_same_name_import/main.py
---
packages: []
count: 0
