crates/cribo/tests/snapshots/requirements@wrapper_decorator_shared_identity.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/wrapper_decorator_shared_identity/main.py
---
packages: []
count: 0
