crates/cribo/tests/snapshots/requirements@wrapper_dunder_comprehension.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/wrapper_dunder_comprehension/main.py
---
packages: []
count: 0
