crates/cribo/tests/snapshots/requirements@wrapper_globals_read.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/wrapper_globals_read/main.py
---
packages: []
count: 0
