crates/cribo/tests/snapshots/requirements@wrapper_module_doc.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/wrapper_module_doc/main.py
---
packages: []
count: 0
