crates/cribo/tests/snapshots/requirements@wrapper_replacement_decorator.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/wrapper_replacement_decorator/main.py
---
packages: []
count: 0
