crates/cribo/tests/snapshots/requirements@wrapper_type_alias_export.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/wrapper_type_alias_export/main.py
---
packages: []
count: 0
