crates/cribo/tests/snapshots/requirements@wrapper_variadic_annotations.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/wrapper_variadic_annotations/main.py
---
packages: []
count: 0
