crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_attribute_alias.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_attribute_alias/main.py
---
packages:
  - attr-alias-pkg
count: 1
