crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_builtins_replacement.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_builtins_replacement/main.py
---
packages:
  - builtins-pkg
count: 1
